--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -6,13 +6,13 @@
 #    By: laugarci <laugarci@student.42barcel>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/10/14 13:17:51 by laugarci          #+#    #+#              #
-#    Updated: 2024/02/08 19:11:13 by laugarci         ###   ########.fr        #
+#    Updated: 2024/02/09 13:12:50 by laugarci         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = Serializer
 
-SRC_FILES = main.cpp Serialize.cpp
+SRC_FILES = main.cpp Serializer.cpp
 OBJ_DIR = objs/
 OBJ_FILES = $(SRC_FILES:.cpp=.o)
 OBJS = $(addprefix $(OBJ_DIR), $(OBJ_FILES))
